front page stories commit

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -8,7 +9,8 @@
   <script src="https://cdn.tailwindcss.com"></script>
 
   <!-- Fonts -->
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600&family=DM+Serif+Display&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600&family=DM+Serif+Display&display=swap"
+    rel="stylesheet">
 </head>
 
 <body>
@@ -21,8 +23,8 @@
       <h1 class="logo">CollegeTimes 🗞️</h1>
       <ul class="nav-links">
         <li><a href="index.html" style="color:#ec4899; font-weight:600;">Home</a></li>
-        
-        <li><a href="lostandfound.html" >Lost & Found</a></li>
+
+        <li><a href="lostandfound.html">Lost & Found</a></li>
         <li><a href="clubs.html">Clubs</a></li>
         <li><a href="schedule.html">Schedules</a></li>
         <li><a href="community.html">Community</a></li>
@@ -37,28 +39,28 @@
   </section>
 
   <!-- TOP NEWS -->
-  <section class="section news">
+  <section class="section">
     <h3>🔥 Front Page Stories</h3>
-    <div class="news-grid">
+    <div class="news">
       <article class="card">
-        <img src="assets/img/zealicon.jpg" alt="Zealicon Fest">
-        <div class="p-5">
+        <div><img src="assets/img/zealicon.jpg" alt="Zealicon Fest"></div>
+        <div class="card-detail">
           <h4>🎡 Zealicon 2025 Returns!</h4>
           <p>A fusion of tech, art & adrenaline — our biggest fest lights up the campus again!</p>
         </div>
       </article>
 
       <article class="card">
-        <img src="assets/img/jss_sports.jpg" alt="Maitri Sports">
-        <div class="p-5">
+        <div><img src="assets/img/jss_sports.jpg" alt="Zealicon Fest"></div>
+        <div class="card-detail">
           <h4>🏅 Maitri Sports Festival</h4>
           <p>Sweat, cheer, and pure campus pride — witness the battle of houses live!</p>
         </div>
       </article>
 
       <article class="card">
-        <img src="assets/img/garba_nigh.jpg" alt="Garba Night">
-        <div class="p-5">
+        <div><img src="assets/img/garba_nigh.jpg" alt="Zealicon Fest"></div>
+        <div class="card-detail">
           <h4>💃 Garba Night Extravaganza</h4>
           <p>Twirls, beats & lights — a night of rhythm and radiant smiles all around.</p>
         </div>
@@ -95,4 +97,5 @@
   </footer>
 
 </body>
+
 </html>
