changes except community

--- a/clubs.html
+++ b/clubs.html
@@ -6,6 +6,7 @@
   <title>Clubs | CollegeTimes 🎭</title>
 
   <script src="https://cdn.tailwindcss.com"></script>
+  <link rel="icon" type="image/png" href="logo.png">
   <link rel="stylesheet" href="style.css">
 
   <!-- Fonts -->
@@ -41,68 +42,57 @@
 
       <!-- NCS -->
       <div class="club-card">
-        <img src="assets/img/ncs.png" alt="NCS Club" class="rounded-lg mb-3">
+        <div> <img src="assets/img/ncs.png" alt="NCS Club"></div>
         <h4>💻 NCS — Coding Society</h4>
         <p>
           Home for every caffeine-fueled coder.  
           Hackathons, DSA nights & bug bounties — we breathe tech.
         </p>
-        <button class="club-btn mt-4">Join NCS</button>
+        <button class="club-btn"><a href="https://www.instagram.com/hackncs?igsh=ZDc4OHUzYnVmOXR6" target="_blank">Join NCS</a></button>
       </div>
 
       <!-- GDSC -->
       <div class="club-card">
-        <img src="assets/img/gdsc.png" alt="GDSC" class="rounded-lg mb-3">
+        <div> <img src="assets/img/gdsc.png" alt="NCS Club"></div>
         <h4>🚀 GDSC — Google Developer Student Club</h4>
         <p>
           Build. Collaborate. Grow.  
           From workshops to dev sprints — powered by Google.
         </p>
-        <button class="club-btn mt-4">Join GDSC</button>
+        <button class="club-btn"><a href="https://www.instagram.com/gdgoncampus.jss/" target="_blank">Join GDSC</a></button>
       </div>
 
       <!-- YFAC -->
       <div class="club-card">
-        <img src="assets/img/yfac.jpg" alt="YFAC" class="rounded-lg mb-3">
+        <div> <img src="assets/img/youthforacause.png" alt="NCS Club"></div>
         <h4>🌍 YFAC — Youth for Action & Change</h4>
         <p>
           Voice of the youth.  
           Social drives, awareness campaigns, and change initiatives.
         </p>
-        <button class="club-btn mt-4">Join YFAC</button>
+        <button class="club-btn"><a href="https://www.instagram.com/yfacjssaten/" target="_blank">Join YFAC</a></button>
       </div>
 
       <!-- DiverCity -->
       <div class="club-card">
-        <img src="assets/img/divercity.jpg" alt="DiverCity Club" class="rounded-lg mb-3">
+        <div> <img src="assets/img/divercity.png" alt="NCS Club"></div>
         <h4>🎨 DiverCity — Art & Culture Club</h4>
         <p>
           Paints, poetry, and performances.  
           The heart of campus culture — creativity knows no bounds.
         </p>
-        <button class="club-btn mt-4">Join DiverCity</button>
+        <button class="club-btn"><a href="https://www.instagram.com/divercityjss/" target="_blank">Join DIVERCITY</a></button>
       </div>
 
       <!-- Music Club -->
       <div class="club-card">
-        <img src="assets/img/music.jpg" alt="Music Club" class="rounded-lg mb-3">
-        <h4>🎵 Crescendo — Music & Band Club</h4>
+        <div> <img src="assets/img/jssverve.png" alt="NCS Club"></div>
+        <h4>🎵 VERVE — Music & Band Club</h4>
         <p>
           Beats, guitars & open mics.  
           If rhythm moves you, this is home.
         </p>
-        <button class="club-btn mt-4">Join Crescendo</button>
-      </div>
-
-      <!-- Sports Club -->
-      <div class="club-card">
-        <img src="assets/img/sports.jpg" alt="Sports Club" class="rounded-lg mb-3">
-        <h4>⚽ Athletic Union</h4>
-        <p>
-          Sweat, team spirit & glory.  
-          From football to badminton — champions rise here.
-        </p>
-        <button class="club-btn mt-4">Join AU</button>
+        <button class="club-btn"><a href="https://www.instagram.com/jssvervesociety/" target="_blank">Join VERVE</a></button>
       </div>
     </div>
   </section>
