--- a/lostandfound.html
+++ b/lostandfound.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Lost & Found | CollegeTimes 🗞️</title>
   <link rel="stylesheet" href="style.css">
+  <link rel="icon" type="image/png" href="logo.png">
   <script src="https://cdn.tailwindcss.com"></script>
 
   <!-- Fonts -->
@@ -35,46 +36,46 @@
   </section>
 
   <!-- LOST & FOUND ITEMS -->
-  <section class="section">
+  <section class="section-lost">
     <h3>📦 Lost & Found Board</h3>
 
-    <div class="news-grid mt-10">
+    <div class="news">
       <!-- Lost Items -->
-      <div class="card p-6">
-        <h4 class="text-red-500 text-xl font-bold mb-2">🎓 College ID Card - John Doe</h4>
+      <div class="card-lost">
+        <h4 >🎓 College ID Card - John Doe</h4>
         <p>Lost near Block B canteen on Nov 5th.</p>
-        <p class="text-sm text-gray-500 mt-2">📞 Contact: +91 98765 43210</p>
+        <p>📞 Contact: +91 98765 43210</p>
       </div>
 
-      <div class="card p-6">
-        <h4 class="text-red-500 text-xl font-bold mb-2">🎒 Black Backpack with Stickers</h4>
+      <div class="card-lost">
+        <h4>🎒 Black Backpack with Stickers</h4>
         <p>Contains a laptop & math notes. Lost near parking area.</p>
-        <p class="text-sm text-gray-500 mt-2">📞 Contact: +91 88888 12345</p>
+        <p>📞 Contact: +91 88888 12345</p>
       </div>
 
-      <div class="card p-6">
-        <h4 class="text-red-500 text-xl font-bold mb-2">🥤 Silver Water Bottle</h4>
+      <div class="card-lost">
+        <h4>🥤 Silver Water Bottle</h4>
         <p>Left in library second floor reading section.</p>
-        <p class="text-sm text-gray-500 mt-2">📞 Contact: +91 90909 56789</p>
+        <p>📞 Contact: +91 90909 56789</p>
       </div>
 
       <!-- Found Items -->
-      <div class="card p-6">
-        <h4 class="text-green-600 text-xl font-bold mb-2">⌚ Smartwatch - NoiseFit</h4>
+      <div class="card-lost">
+        <h4>⌚ Smartwatch - NoiseFit</h4>
         <p>Found near auditorium on Nov 7th.</p>
-        <p class="text-sm text-gray-500 mt-2">👤 Collected by: Rahul (CS Dept)</p>
+        <p>👤 Collected by: Rahul (CS Dept)</p>
       </div>
 
-      <div class="card p-6">
-        <h4 class="text-green-600 text-xl font-bold mb-2">☂️ Blue Umbrella</h4>
+      <div class="card-lost">
+        <h4>☂️ Blue Umbrella</h4>
         <p>Found near hostel gate after rain.</p>
-        <p class="text-sm text-gray-500 mt-2">📍 Available at: Security Office</p>
+        <p>📍 Available at: Security Office</p>
       </div>
 
-      <div class="card p-6">
-        <h4 class="text-green-600 text-xl font-bold mb-2">🧮 Calculator (Casio FX-991ES)</h4>
+      <div class="card-lost">
+        <h4>🧮 Calculator (Casio FX-991ES)</h4>
         <p>Found in classroom 3C during 2nd-year lecture.</p>
-        <p class="text-sm text-gray-500 mt-2">📞 Contact: +91 77777 43210</p>
+        <p>📞 Contact: +91 77777 43210</p>
       </div>
     </div>
   </section>
