--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>CollegeTimes 🗞️</title>
   <link rel="stylesheet" href="style.css">
+  <link rel="icon" type="image/png" href="logo.png">
   <script src="https://cdn.tailwindcss.com"></script>
 
   <!-- Fonts -->
@@ -72,19 +73,19 @@
   <section class="section clubs">
     <h3>🎭 Club Chronicles</h3>
     <div class="club-grid">
-      <div class="club-card">
+      <div class="club-index">
         <h4>💻 NCS</h4>
         <p>Coding, caffeine & community — where problem solvers unite.</p>
       </div>
-      <div class="club-card">
+      <div class="club-index">
         <h4>🚀 GDSC</h4>
         <p>Google Devs in action — innovation with impact.</p>
       </div>
-      <div class="club-card">
+      <div class="club-index">
         <h4>🌍 YFAC</h4>
         <p>Youth for Action & Change — turning ideas into initiatives.</p>
       </div>
-      <div class="club-card">
+      <div class="club-index">
         <h4>🎨 DiverCity</h4>
         <p>Art, identity & vibes — creativity knows no bounds.</p>
       </div>
